fix - Arrays.asList() -> List.of() 수정